# Carlytics

./: README.md
client/: index.html  package-lock.json  package.json
client/src/: App.jsx
client/src/components/: CarForm.jsx
client/src/pages/: Home.jsx  ResultPage.jsx
server/: main.py  pyproject.toml  requirements.txt  testing.py
server/controllers/: image_captioning.py  image_url_generator.py  sale_prediction.py
server/routes/: sale_prediction_route.py
